<resources>
    <string name="app_name">HanbinAndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage" translatable="false">"I\'m an EditText"</string>
    <string name="hinttext" translatable="false">Write something here"</string>
    <string name="checkbox_msg" translatable="false">"Do you drink coffee?"</string>
    <string name="switch_msg" translatable="false">"Do you drink coffee?"</string>
    <string name="radio_msg" translatable="false">"Do you drink coffee?"</string>
    <string name="myimagebutton" translatable="false">"Button"</string>
</resources>